--- a/freebsd/mozilla/userChrome.css
+++ b/freebsd/mozilla/userChrome.css
@@ -173,3 +173,17 @@
       display: none !important;
     }
 /*** End of: Megabar Styler Two-Row Flex Layout ***/
+
+
+/*** Tighten up drop-down/context/popup menu spacing ***/
+
+menupopup > menuitem, menupopup > menu {
+  padding-block: 4px !important;
+}
+:root {
+  --arrowpanel-menuitem-padding: 4px 8px !important;
+}
+
+:root { 
+  --toolbarbutton-inner-padding: 6px !important; 
+}
